--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: 'https://rizi97.github.io/hugo-marketing-reports/'
+baseURL: 'https://colinharbut.github.io/marketingreports/'
 languageCode: 'en'
 title: 'Marketing Reports'
 
