--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
-    "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.16"
+    "postcss-cli": "^11.0.0"
   },
   "scripts": {
     "build:css": "tailwindcss -i static/assets/main.css -o static/assets/styles.css --watch"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
